--- a/front/src/index.html
+++ b/front/src/index.html
@@ -7,7 +7,7 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Redeem Your Code - Cryptage: Origins</title>
 
-    <base href="https://cryptage.co/freeCards/" target="_blank">
+    <base href="https://cryptage.co/freeCards/">
 
     <link rel="stylesheet" href="/freeCards/assets/style.css">
     <link href="https://fonts.googleapis.com/css?family=Baloo|Montserrat:400,400i,700" rel="stylesheet">
@@ -353,11 +353,12 @@
     </div>
     <h1>All done!</h1>
     <p>
-        You will receive your rare <b>Cryptage Origins</b> card  as soon as the game launches on the mainnet.
+        You will receive your rare <b>Cryptage Origins</b> <br>
+        card  as soon as the game launches on the mainnet.
     </p>
 
     <p>
-        And we'll also let you know via email,
+        And we'll also let you know via email, <br>
         just so we make sure you don't miss it.
     </p>
 </div>
