--- a/front/src/index.html
+++ b/front/src/index.html
@@ -353,8 +353,8 @@
     </div>
     <h1>All done!</h1>
     <p>
-        You will receive your rare <b>Cryptage Origins</b> <br>
-        card  as soon as the game launches on the mainnet.
+        You will receive your rare <b>Cryptage Origins card</b> <br>
+        as soon as the game launches on the mainnet.
     </p>
 
     <p>
