--- a/front/src/index.html
+++ b/front/src/index.html
@@ -43,7 +43,7 @@
                                                                         href="mail">cryptage@decenter.com</a>.
     </p>
     <script type="text/javascript">
-      document.getElementById('contact').href += 'to:cryptage' +
+      document.getElementById('contact').href = 'mail' + 'to:cryptage' +
         '@' + 'decenter.com';
     </script>
 </div>
@@ -71,7 +71,7 @@
                                                                         href="mail">cryptage@decenter.com</a>.
     </p>
     <script type="text/javascript">
-      document.getElementById('contact').href += 'to:cryptage' +
+      document.getElementById('contact').href = 'mail' + 'to:cryptage' +
         '@' + 'decenter.com';
     </script>
 </div>
