--- a/front/src/index.html
+++ b/front/src/index.html
@@ -252,8 +252,8 @@
 
 
     <form action="" method="POST">
-        <input type="email" placeholder="EMAIL" name="email">
-        <input type="text" placeholder="ETH ADDRESS" name="address">
+        <input type="email" placeholder="EMAIL" name="email" required>
+        <input type="text" placeholder="ETH ADDRESS" name="address" required>
 
         <button class="button-wrapper">
             REDEEM
