--- a/front/src/index.html
+++ b/front/src/index.html
@@ -13,7 +13,11 @@
     <link href="https://fonts.googleapis.com/css?family=Baloo|Montserrat:400,400i,700" rel="stylesheet">
 </head>
 <body>
-<img src="/freeCards/assets/logo.png" alt="Cryptage: Origins Logo" width="417" class="logo">
+<div>
+    <a href="/">
+        <img src="/freeCards/assets/logo.png" alt="Cryptage: Origins Logo" width="417" class="logo">
+    </a>
+</div>
 {{if eq .Error "invalid"}}
 <div class="container error">
     <div>
